# solana-arbitrage-bot

./: .gitignore  LICENSE  README.md
client/: .gitignore  Cargo.toml  README.md  arbitrage.sh  localnet_defaults.json  mainnet_defaults.json  serum_open_orders.json  tmp.sh
client/src/: arb.rs  constants.rs  error.rs  lib.rs  main.rs  pool.rs  tmp.rs  utils.rs  workspace.code-workspace
client/src/pool_utils/: base.rs  constant_price.rs  constant_product.rs  mod.rs  offset.rs  orca.rs  serum.rs  stable.rs
client/src/pools/: aldrin.rs  mercurial.rs  mod.rs  orca.rs  saber.rs  serum.rs
client/src/serialize/: mod.rs  pool.rs  token.rs
client/src/setup/: setup_ata.rs  setup_open_orders.rs
client/src/tests/: mod.rs  quotes.rs
mainnet-fork/: .gitignore  README.md  accounts.json  check_ata_balances.ts  init_new_scrape.sh  new_scrape.ts  orca_swap.ts  package-lock.json  package.json  programs.json  saved_mints.json  scrape_signature.ts  setup.sh  setup_owner.ts  setup_validator.py  start_localnet.sh  tsconfig.json  wallets.json
mainnet-fork/get_wsol/: index.ts  package-lock.json  package.json  tsconfig.json
onchain-data/: .gitignore  README.md  analyze.ts  index.ts  orca.ts  package-lock.json  package.json  results.py  tsconfig.json
onchain-data/arbitragers/: -1_specific_arb_signers_123658614.json  -2_specific_arb_signers_123658613.json  -3_specific_arb_signers_123658612.json  -4_specific_arb_signers_123658611.json  0_specific_arb_signers_123658615.json  1_specific_arb_signers_123658616.json
pools/orca/: params_AART_USDC.json  (+116 more)
program/: .gitignore  Anchor.toml  README.md  local_setup.sh  package-lock.json  package.json  tsconfig.json
program/programs/tmp/: Cargo.toml
program/programs/tmp/src/: error.rs  ix_data.rs  lib.rs  state.rs
program/programs/tmp/src/swaps/: aldrin.rs  mercurial.rs  mod.rs  orca.rs  saber.rs  serum.rs
tmp/: index.ts  package-lock.json  package.json  tsconfig.ts
(+894 files in other folders)
